// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Wizard 1`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="cxd-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="cxd-Form cxd-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  网址
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  名称
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="cxd-Panel-footer cxd-Wizard-footer"
      role="wizard-footer"
    >
      <div
        className="cxd-Button cxd-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span>
          上一步
        </span>
      </div>
      <button
        className="cxd-Button cxd-Button--default"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard actionPrevLabel actionNextLabel actionFinishLabel className actionClassName 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal wizard-class-name"
    style="position: relative;"
  >
    <div
      class="cxd-Wizard-step"
    >
      <div
        class="cxd-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              <icon-mock
                classname="icon icon-check"
                icon="check"
              />
            </span>
            Step 1
          </li>
          <li
            class="is-complete is-active"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              2
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="cxd-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <span
            class="cxd-TplField"
          >
            <span>
              这是最后一步了
            </span>
          </span>
        </form>
      </div>
      <div
        class="cxd-Panel-footer cxd-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="cxd-Button cxd-Button--default btn-lg btn-primary"
          type="button"
        >
          <span>
            PrevStep
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary btn-lg btn-primary"
          type="button"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard actionPrevLabel actionNextLabel actionFinishLabel className actionClassName 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal wizard-class-name"
    style="position: relative;"
  >
    <div
      class="cxd-Wizard-step"
    >
      <div
        class="cxd-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete is-active"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class="is-complete"
          >
            <span
              class="cxd-Badge is-complete"
            >
              <icon-mock
                classname="icon icon-check"
                icon="check"
              />
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="cxd-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    网址
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="website"
                  placeholder=""
                  size="10"
                  type="url"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    名称
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="name"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Panel-footer cxd-Wizard-footer"
        role="wizard-footer"
      >
        <div
          class="cxd-Button cxd-Button--default is-disabled btn-lg btn-primary"
          disabled=""
        >
          <span>
            PrevStep
          </span>
        </div>
        <button
          class="cxd-Button cxd-Button--default btn-lg btn-primary"
          type="button"
        >
          <span>
            NextStep
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard dialog 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="cxd-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="cxd-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            网址
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            名称
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <button
                      class="cxd-Button cxd-Button--default"
                      type="button"
                    >
                      <span>
                        OpenDialog
                      </span>
                    </button>
                  </div>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <div
                  class="cxd-Button cxd-Button--default is-disabled"
                  disabled=""
                >
                  <span>
                    上一步
                  </span>
                </div>
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          添加
        </div>
      </div>
      <div
        class="cxd-Modal-body"
      >
        <div
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    Name
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="Amis"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard dialog 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="cxd-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="cxd-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            网址
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            名称
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <button
                      class="cxd-Button cxd-Button--default"
                      type="button"
                    >
                      <span>
                        OpenDialog
                      </span>
                    </button>
                  </div>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <div
                  class="cxd-Button cxd-Button--default is-disabled"
                  disabled=""
                >
                  <span>
                    上一步
                  </span>
                </div>
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi 1`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="cxd-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="cxd-Form cxd-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  网址
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  名称
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value="Amis renderer"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="cxd-Panel-footer cxd-Wizard-footer"
      role="wizard-footer"
    >
      <div
        className="cxd-Button cxd-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span>
          上一步
        </span>
      </div>
      <button
        className="cxd-Button cxd-Button--default"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Spinner-overlay"
          />
          <div
            class="cxd-Spinner cxd-Spinner--overlay cxd-Spinner--lg"
          />
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="cxd-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="cxd-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            网址
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            名称
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <div
                  class="cxd-Button cxd-Button--default is-disabled"
                  disabled=""
                >
                  <span>
                    上一步
                  </span>
                </div>
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="cxd-Badge is-complete is-active"
                    >
                      <icon-mock
                        classname="icon icon-check"
                        icon="check"
                      />
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-active"
                  >
                    <span
                      class="cxd-Badge is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 3`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="cxd-Badge is-complete is-active"
                    >
                      <icon-mock
                        classname="icon icon-check"
                        icon="check"
                      />
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-complete is-active"
                  >
                    <span
                      class="cxd-Badge is-complete is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi show loading 1`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      加载中
    </div>
  </div>
  <div
    className="cxd-Spinner-overlay in"
  />
  <div
    className="cxd-Spinner in cxd-Spinner--overlay cxd-Spinner--lg"
  />
</div>
`;

exports[`Renderer:Wizard initApi show loading 2`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="cxd-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="cxd-Form cxd-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  网址
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  名称
                </span>
              </span>
              <span
                className="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="cxd-Panel-footer cxd-Wizard-footer"
      role="wizard-footer"
    >
      <div
        className="cxd-Button cxd-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span>
          上一步
        </span>
      </div>
      <button
        className="cxd-Button cxd-Button--default"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
  <div
    className="cxd-Spinner-overlay"
  />
  <div
    className="cxd-Spinner cxd-Spinner--overlay cxd-Spinner--lg"
  />
</div>
`;

exports[`Renderer:Wizard readOnly 1`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="cxd-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="cxd-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="cxd-Form cxd-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
        <div
          className="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  网址
                </span>
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={true}
                size={10}
                type="url"
                value="http://amis.baidu.com"
              />
            </div>
          </div>
        </div>
        <div
          className="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            className="cxd-Form-label"
          >
            <span>
              <span
                className="cxd-TplField"
              >
                <span>
                  名称
                </span>
              </span>
            </span>
          </label>
          <div
            className="cxd-Form-control cxd-TextControl"
          >
            <div
              className="cxd-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value="Amis"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="cxd-Panel-footer cxd-Wizard-footer"
      role="wizard-footer"
    >
      <div
        className="cxd-Button cxd-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span>
          上一步
        </span>
      </div>
      <button
        className="cxd-Button cxd-Button--default"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard send data 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="cxd-Wizard-step"
    >
      <div
        class="cxd-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              <icon-mock
                classname="icon icon-check"
                icon="check"
              />
            </span>
            Step 1
          </li>
          <li
            class="is-complete is-active"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              2
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="cxd-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Spinner-overlay"
          />
          <div
            class="cxd-Spinner cxd-Spinner--overlay"
          />
          <span
            class="cxd-TplField"
          >
            <span>
              这是最后一步了
            </span>
          </span>
        </form>
      </div>
      <div
        class="cxd-Panel-footer cxd-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="cxd-Button cxd-Button--default"
          type="button"
        >
          <span>
            上一步
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary"
          type="button"
        >
          <span>
            完成
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
    <div
      class="cxd-Spinner-overlay"
    />
    <div
      class="cxd-Spinner cxd-Spinner--overlay cxd-Spinner--lg"
    />
  </div>
</div>
`;

exports[`Renderer:Wizard step initApi 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="cxd-Wizard-step"
    >
      <div
        class="cxd-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="cxd-Badge is-complete is-active"
            >
              <icon-mock
                classname="icon icon-check"
                icon="check"
              />
            </span>
            Step 1
          </li>
          <li
            class="is-active"
          >
            <span
              class="cxd-Badge is-active"
            >
              2
            </span>
            Step 2
          </li>
          <li
            class=""
          >
            <span
              class="cxd-Badge"
            >
              3
            </span>
            Step 3
          </li>
        </ul>
      </div>
      <div
        class="cxd-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--normal is-required"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    邮箱
                  </span>
                </span>
                <span
                  class="cxd-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="email"
                  placeholder=""
                  size="10"
                  type="email"
                  value="xxx@xxx.com"
                />
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Panel-footer cxd-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="cxd-Button cxd-Button--default"
          type="button"
        >
          <span>
            上一步
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--default"
          type="button"
        >
          <span>
            下一步
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard steps not array 1`] = `
<div
  className="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
>
  <div
    className="cxd-Wizard-step"
  >
    <div
      className="cxd-Wizard-steps"
      id="form-wizard"
    />
    <div
      className="cxd-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <p
        className="text-danger"
      >
        配置错误
      </p>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard target 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="cxd-Wizard-step"
            >
              <div
                class="cxd-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="cxd-Badge is-complete is-active"
                    >
                      <icon-mock
                        classname="icon icon-check"
                        icon="check"
                      />
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-complete is-active"
                  >
                    <span
                      class="cxd-Badge is-complete is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="cxd-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                </form>
              </div>
              <div
                class="cxd-Panel-footer cxd-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="cxd-Button cxd-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          Website
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-control cxd-TextControl"
                  >
                    <div
                      class="cxd-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="website"
                        placeholder=""
                        size="10"
                        type="text"
                        value="http://amis.baidu.com"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          Name
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-control cxd-TextControl"
                  >
                    <div
                      class="cxd-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="Amis"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard validate 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Wizard cxd-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="cxd-Wizard-step"
    >
      <div
        class="cxd-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-active"
          >
            <span
              class="cxd-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class=""
          >
            <span
              class="cxd-Badge"
            >
              2
            </span>
            Step 2
          </li>
          <li
            class=""
          >
            <span
              class="cxd-Badge"
            >
              3
            </span>
            Step 3
          </li>
        </ul>
      </div>
      <div
        class="cxd-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isUrl"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    网址
                  </span>
                </span>
                <span
                  class="cxd-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control is-error has-error--isUrl cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="website"
                  placeholder=""
                  size="10"
                  type="url"
                  value="http"
                />
              </div>
            </div>
            <ul
              class="cxd-Form-feedback"
            >
              <li>
                URL 格式不正确
              </li>
            </ul>
          </div>
          <div
            class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isRequired"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    名称
                  </span>
                </span>
                <span
                  class="cxd-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control is-error has-error--isRequired cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="name"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <ul
              class="cxd-Form-feedback"
            >
              <li>
                这是必填项
              </li>
            </ul>
          </div>
        </form>
      </div>
      <div
        class="cxd-Panel-footer cxd-Wizard-footer"
        role="wizard-footer"
      >
        <div
          class="cxd-Button cxd-Button--default is-disabled"
          disabled=""
        >
          <span>
            上一步
          </span>
        </div>
        <button
          class="cxd-Button cxd-Button--default"
          type="button"
        >
          <span>
            下一步
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
